Fixed issue where long lines were being cut off incorrectly on single post screen

--- a/client/blocks/reader-feed-header/style.scss
+++ b/client/blocks/reader-feed-header/style.scss
@@ -40,14 +40,14 @@
 }
 
 .reader-feed-header__site .reader-feed-header__site-title {
-	align-items: center;
+	align-items: flex-start;
 	display: flex;
 	font-family: $serif;
 	font-size: $font-title-large;
 	font-weight: 600;
+	line-height: 2.5rem;
 	justify-content: center;
-	max-height: 16px * 4;
-	margin-bottom: 6px;
+	margin-bottom: 19px;
 	overflow: hidden;
 	position: relative;
 	white-space: normal;
@@ -67,9 +67,13 @@
 		max-height: 16px * 5.9;
 	}
 
+	a {
+		text-align: center;
+	}
+
 	.blog-stickers {
 		position: relative;
-		top: 2px;
+		top: 11px;
 	}
 }
 
